--- a/6.1 Font Properties/font-size.html
+++ b/6.1 Font Properties/font-size.html
@@ -25,13 +25,21 @@
     }
 
     html {
-      font-size: xx-large;
+      font-size: 20pt;
+    }
+
+    h1 {
+      font-family: 'Diphylleia', serif;
     }
   </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Diphylleia&display=swap" rel="stylesheet">
 </head>
 <html lang="en">
 
 <body>
+  <h1>A funny Font</h1>
   <p id="pixel">1 Pixel is 1/96 of an Inch</p>
   <p id="point">1 Point is 1/72 of an Inch</p>
   <footer>
