--- a/7.2 CSS Positioning/index.html
+++ b/7.2 CSS Positioning/index.html
@@ -5,6 +5,24 @@
   <title>CSS Positioning Exercise</title>
   <style>
     /* Write your code here */
+    .blue-box {
+      background-color: blue;
+      width: 500px;
+      height: 300px;
+      position: relative;
+      top: 200px;
+      left: 200px;
+    }
+
+    .red-circle {
+      background-color: red;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%; /* top: 50%; because it is half of the ancestor(.blue-box) div size*/
+      left: 50%; /* left: 50%; because it is half of the ancestor(.blue-box) div size*/
+    }
   </style>
 </head>
 
