--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -6,7 +6,45 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
-    
+    /* red rectangle */
+    .flag {
+      width: 900px;
+      height: 600px;
+      background-color: #ce1126;
+      position: relative;
+    }
+
+    /* blue rectangle */
+    .flag>div {
+      width: 100%;
+      height: 300px;
+      background-color: #002868;
+      position: absolute;
+      top: 150px;
+      z-index: 2;
+    }
+
+    /* white circle */
+    .flag>div>div {
+      height: 200px;
+      width: 200px;
+      background-color: white;
+      border-radius: 50%;
+      position: relative;
+      top: 50px;
+      left: 350px;
+    }
+
+    p {
+      margin: 0;
+      font-size: 5rem;
+      text-align: center;
+      color: white;
+    }
+
+    .flag div div p {
+      color: black;
+    }
   </style>
 </head>
 
