--- a/8.1 CSS Float/index.html
+++ b/8.1 CSS Float/index.html
@@ -18,16 +18,23 @@
     p {
       font-size: 2em;
     }
+    
+    img {
+      float: left;
+    }
 
     .cat {
       background-color: aquamarine;
+      float: left;
     }
 
     .dog {
       background-color: coral;
+      float: right;
     }
 
     footer {
+      clear: both;
       text-align: center;
       background-color: blueviolet;
     }
@@ -56,7 +63,7 @@
       frighten.</p>
   </div>
 
-  <footer>Copyright. This is the footer</footer>
+  <footer>&copy; Copyright. This is the footer</footer>
 </body>
 
 </html>
