--- a/0.0 Practice Here/index.html
+++ b/0.0 Practice Here/index.html
@@ -1,68 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Advanced HTML Structure</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Testing</title>
 </head>
 <body>
-
-  <header>
-    <div class="header-content">
-      <h1>Main Title</h1>
-      <p>Subtitle or description goes here.</p>
-    </div>
-  </header>
-
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-
-  <section id="main-section">
-    <article class="main-article">
-      <h2>Featured Article</h2>
-      <p class="article-content">Content for the featured article...</p>
-    </article>
-
-    <article class="secondary-article">
-      <h2>Secondary Article</h2>
-      <p class="article-content">Content for the secondary article...</p>
-    </article>
-
-    <div class="additional-content">
-      <h2>Additional Section</h2>
-      <p>This section contains additional content.</p>
-    </div>
-  </section>
-
-  <aside>
-    <div class="aside-content">
-      <h2>Additional Information</h2>
-      <p>This is some additional content placed in the aside section.</p>
-      <ul>
-        <li><a href="#">Link 1</a></li>
-        <li><a href="#">Link 2</a></li>
-        <li><a href="#">Link 3</a></li>
-      </ul>
-    </div>
-  </aside>
-
-  <footer>
-    <div class="footer-content">
-      <p>Contact information, footer links, etc.</p>
-      <div class="social-media">
-        <a href="https://facebook.com/mdrubelahamed01">Facebook</a>
-        <a href="https://twitter.com/mdrubelahamed01">Twitter</a>
-        <a href="https://instagram.com/mdrubelahamed01">Instagram</a>
-      </div>
-    </div>
-  </footer>
-
+    <h1>This is an experiment</h1>
 </body>
 </html>
