--- a/0.0 Practice Here/index.html
+++ b/0.0 Practice Here/index.html
@@ -1,55 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Combined Selectors Challenge</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS Positions Challenge</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
-<header>
-  <h1>Welcome to Our Website</h1>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-
-<main>
-  <section class="featured">
-    <article>
-      <h2>Featured Article</h2>
-      <p>This is the featured article content.</p>
-    </article>
-    <aside>
-      <h3>Related Articles</h3>
-      <ul>
-        <li><a href="#">Article 1</a></li>
-        <li><a href="#">Article 2</a></li>
-        <li><a href="#">Article 3</a></li>
-      </ul>
-    </aside>
-  </section>
-
-  <section class="news">
-    <h2>Latest News</h2>
-    <article>
-      <h3>News Item 1</h3>
-      <p>This is the first news item.</p>
-    </article>
-    <article>
-      <h3>News Item 2</h3>
-      <p>This is the second news item.</p>
-    </article>
-  </section>
-</main>
-
-<footer>
-  <p>&copy; 2024 Our Website</p>
-</footer>
+  <div class="container">
+    <div class="box static-box">Static</div>
+    <div class="box relative-box">Relative</div>
+    <div class="box absolute-box">Absolute</div>
+    <div class="box fixed-box">Fixed</div>
+  </div>
 
 </body>
 </html>
