--- a/6.3 CSS Box Model/index.html
+++ b/6.3 CSS Box Model/index.html
@@ -5,14 +5,10 @@
   <meta charset="UTF-8">
   <title>CSS Box Model</title>
   <style>
-    /* Write your CSS code here */
+    /* Write your CSS here */
     div {
-      width: 200px;
       height: 200px;
-    }
-
-    p {
-      margin: 0;
+      width: 200px;
     }
 
     #box1 {
@@ -24,7 +20,7 @@
     #box2 {
       background-color: gold;
       border: solid black;
-      border-width: 20px 10px;
+      border-width:20px 10px;
       margin-left: 260px;
     }
 
@@ -32,6 +28,10 @@
       background-color: indianred;
       border: 10px solid black;
       margin-left: 40px;
+    }
+
+    p {
+      margin: 0;
     }
   </style>
 </head>
