--- a/7.2 CSS Positioning/index.html
+++ b/7.2 CSS Positioning/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
+  
+  <head>
+    <title>CSS Positioning Exercise</title>
+    <style>
+      /* Write your code here */
+    .blue-box {
+      height: 300px;
+      width: 500px;
+      background-color: blue;
+      position: relative;
+      top: 200px;
+      left: 200px;
+    }
 
-<head>
-  <title>CSS Positioning Exercise</title>
-  <style>
-    /* Write your code here */
     .red-circle {
-      background-color: red;
-      width: 200px;
       height: 200px;
+      width: 200px;
+      background-color: red;
       border-radius: 50%;
       position: absolute;
       top: 50%; /* top: 50%; because it is half of the ancestor(.blue-box) div size*/
       left: 50%; /* left: 50%; because it is half of the ancestor(.blue-box) div size*/
-    }
-
-    .blue-box {
-      background-color: blue;
-      width: 500px;
-      height: 300px;
-      position: relative;
-      top: 200px;
-      left: 200px;
     }
   </style>
 </head>
@@ -35,3 +35,9 @@
 </body>
 
 </html>
+
+
+
+<!-- *IMPORTANT NOTE
+Yes, that is correct. The child element will be positioned according to its parent element, even if the parent element is not relative. This is because the child element has `position: absolute;` which means it will ignore the normal document flow and look for the closest positioned ancestor. If the parent element is not relative, then the child element will look for the next ancestor that is positioned, and so on, until it reaches the root element. If none of the ancestors are positioned, then the child element will be positioned relative to the browser window.
+ -->
