--- a/0.0 Practice Here/index.html
+++ b/0.0 Practice Here/index.html
@@ -3,17 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Positions Challenge</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Document</title>
 </head>
 <body>
-
-  <div class="container">
-    <div class="box static-box">Static</div>
-    <div class="box relative-box">Relative</div>
-    <div class="box absolute-box">Absolute</div>
-    <div class="box fixed-box">Fixed</div>
-  </div>
-
+  <a href="https://www.github.com/mdrubelahamed" style="text-decoration: none;" title="I'm a link" >Github</a>
 </body>
 </html>
+
