--- a/0.0 Practice Here/index.html
+++ b/0.0 Practice Here/index.html
@@ -3,10 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>flexbox</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <a href="https://www.github.com/mdrubelahamed" style="text-decoration: none;" title="I'm a link" >Github</a>
+  <div class="links">
+    <a href="https://www.github.com/mdrubelahamed" style="text-decoration: none;" title="I'm a link" class="github-link">Github</a>
+    <a href="https://www.twitter.com/mdrubelahamed01" class="twitter-link">Twitter</a>
+    <a href="https://in.linkedin.com/in/mdrubelahamed" class="linkedin-link">Linkedin</a>
+  </div>
+  <h1>Images Collections</h1>
+  <div class="image-gallery">
+    <img src="images/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" alt="" width="250">
+    <img src="images/Bard_Generated_Image.jpeg" alt="" width="250">
+    <img src="images/daniel-k-cheung-cPF2nlWcMY4-unsplash.jpg" alt="" width="250">
+    <img src="images/dave-hoefler-F4-j7I4sFBU-unsplash.jpg" alt="" width="250">
+    <img src="images/dominik-vanyi-5Fxuo7x-eyg-unsplash.jpg" alt="" width="250">
+    <img src="images/elena-cordery-RLlcbkemwnw-unsplash.jpg" alt="" width="250">
+    <img src="images/tengyart-DoqtEEn8SOo-unsplash.jpg" alt="" width="250">
+    <img src="images/walpaper1.jpg" alt="" width="250">
+  </div>
 </body>
 </html>
 
