update js eventListner

--- a/0.0/index.html
+++ b/0.0/index.html
@@ -3,26 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>flexbox</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Project Based Learning</title>
+  <link rel="stylesheet" href="style2.css">
+
 </head>
 <body>
-  <div class="links">
-    <a href="https://www.github.com/mdrubelahamed" style="text-decoration: none;" title="I'm a link" class="github-link">Github</a>
-    <a href="https://www.twitter.com/mdrubelahamed01" class="twitter-link">Twitter</a>
-    <a href="https://in.linkedin.com/in/mdrubelahamed" class="linkedin-link">Linkedin</a>
-  </div>
-  <h1>Images Collections</h1>
-  <div class="image-gallery">
-    <img src="images/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" alt="" width="250">
-    <img src="images/Bard_Generated_Image.jpeg" alt="" width="250">
-    <img src="images/daniel-k-cheung-cPF2nlWcMY4-unsplash.jpg" alt="" width="250">
-    <img src="images/dave-hoefler-F4-j7I4sFBU-unsplash.jpg" alt="" width="250">
-    <img src="images/dominik-vanyi-5Fxuo7x-eyg-unsplash.jpg" alt="" width="250">
-    <img src="images/elena-cordery-RLlcbkemwnw-unsplash.jpg" alt="" width="250">
-    <img src="images/tengyart-DoqtEEn8SOo-unsplash.jpg" alt="" width="250">
-    <img src="images/walpaper1.jpg" alt="" width="250">
-  </div>
+  <h1>Current Date and Time</h1>
+  <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">Click me to display Date and Time.</button>
+
+  <p id="demo"></p>
+
+  <h1>Greetings</h1>
+
+  Name <input type="text" id="myName" value="">
+
+  <p id="greetPeople">Hello </p>
+
+  <script src="index.js"></script>
 </body>
 </html>
-
