update drum listner

--- a/0.0/index.html
+++ b/0.0/index.html
@@ -3,22 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Based Learning</title>
-  <link rel="stylesheet" href="style2.css">
-
+  <title>Palindrome Cheker</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Current Date and Time</h1>
-  <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">Click me to display Date and Time.</button>
-
-  <p id="demo"></p>
-
-  <h1>Greetings</h1>
-
-  Name <input type="text" id="myName" value="">
-
-  <p id="greetPeople">Hello </p>
-
+  <p class="pal">Refresh Me</p>
   <script src="index.js"></script>
 </body>
 </html>
