--- a/Drum Kit Starting Files/index.html
+++ b/Drum Kit Starting Files/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>Drum Kit</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drum Kit</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ in India.
   </footer>
   <script src="index.js"></script>
 </body>
