sum of natural no

--- a/SELF/add_JS.html
+++ b/SELF/add_JS.html
@@ -9,7 +9,22 @@
 <body>
   <h1>Hello World</h1>
   
-  <button type="button" class="print-page">Click here to print the page</button>
+  <button type="button" class="print-page">Click here to print the page</button><br><br>
+
+  <h2>Sum of Natural Numbers</h2>
+  <label for="num1" class="label-no"> First Number
+    <input type="number" name="num1" id="num1">
+  </label>
+  <br>
+  <label for="num2" class="label-no"> Last Number
+  <input type="number" name="num2" id="num2">
+  </label>
+  <br>
+  <label for="calculate-sum">
+    <button type="button" id="calculate-sum"> Calculate Sum</button>
+  </label>
+
+  <p class="sum-output">Your Output is </p>
 
   <script src="script2.js"></script>
 </body>
