--- a/SELF/add_JS.html
+++ b/SELF/add_JS.html
@@ -11,6 +11,7 @@
   
   <button type="button" class="print-page">Click here to print the page</button><br><br>
 
+  <!-- Sum of natural numbers  -->
   <h2>Sum of Natural Numbers</h2>
   <label for="num1" class="label-no"> First Number
     <input type="number" name="num1" id="num1">
@@ -24,7 +25,9 @@
     <button type="button" id="calculate-sum"> Calculate Sum</button>
   </label>
 
-  <p class="sum-output">Your Output is </p>
+  <p class="sum-output">Your Output is ... </p>
+
+  <p class="show-url"></p>
 
   <script src="script2.js"></script>
 </body>
