change html content of print

--- a/SELF/add_JS.html
+++ b/SELF/add_JS.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Hello World</h1>
   
-  <button type="button" class="print-page">Click here to print the page</button><br><br>
+  <button type="button" class="print-page">Print the page</button><br><br>
 
   <!-- Sum of natural numbers  -->
   <h2>Sum of Natural Numbers</h2>
