--- a/SELF/add_JS.html
+++ b/SELF/add_JS.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Programming, Web Development, DEEP WORK">
+  <meta name="description" content="Practice is the best way to learn, so i am learning web development by practicing it.">
+  <meta name="author" content="Md Rubel Ahamed">
+  <meta http-equiv="refresh" content="5; url="https://mdrubelahamed.github.io/Web-Development/SELF/extra_page.html">
   <title>Add just</title>
   <link rel="stylesheet" href="style2.css">
 </head>
 <body>
   <h1>Hello World</h1>
+  <p class="show-url"></p>
   
-  <button type="button" class="print-page">Print the page</button><br><br>
+  <button type="button" class="print-page">Print</button><br><br>
 
   <!-- Sum of natural numbers  -->
   <h2>Sum of Natural Numbers</h2>
@@ -22,12 +27,9 @@
   </label>
   <br>
   <label for="calculate-sum">
-    <button type="button" id="calculate-sum"> Calculate Sum</button>
+    <button type="button" id="calculate-sum"> Calculate Sum</button><span class="equal-sign">= <output class="sum-output"></output></span>
   </label>
 
-  <p class="sum-output">Your Output is ... </p>
-
-  <p class="show-url"></p>
 
   <script src="script2.js"></script>
 </body>
