add mutiple and divide button

--- a/SELF/add_JS.html
+++ b/SELF/add_JS.html
@@ -6,30 +6,36 @@
   <meta name="keywords" content="Programming, Web Development, DEEP WORK">
   <meta name="description" content="Practice is the best way to learn, so i am learning web development by practicing it.">
   <meta name="author" content="Md Rubel Ahamed">
-  <meta http-equiv="refresh" content="5; url="https://mdrubelahamed.github.io/Web-Development/SELF/extra_page.html">
   <title>Add just</title>
   <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-  <h1>Hello World</h1>
   <p class="show-url"></p>
-  
-  <button type="button" class="print-page">Print</button><br><br>
+  <h1>Want a greet ?</h1>
+  <button class="greet" type="button">😀greet me</button>
+  <p class="p-greet"></p>
 
-  <!-- Sum of natural numbers  -->
-  <h2>Sum of Natural Numbers</h2>
-  <label for="num1" class="label-no"> First Number
-    <input type="number" name="num1" id="num1">
-  </label>
-  <br>
-  <label for="num2" class="label-no"> Last Number
-  <input type="number" name="num2" id="num2">
-  </label>
-  <br>
-  <label for="calculate-sum">
-    <button type="button" id="calculate-sum"> Calculate Sum</button><span class="equal-sign">= <output class="sum-output"></output></span>
-  </label>
-
+  <div class="math-operation">
+    <!-- Sum of natural numbers  -->
+    <h2>Sum of Natural Numbers</h2>
+    <label for="num1" class="label-no"> First Number
+      <input type="number" name="num1" id="num1">
+    </label>
+    <br>
+    <label for="num2" class="label-no"> Last Number
+    <input type="number" name="num2" id="num2">
+    </label>
+    <br>
+    <span class="equal-sign"><output class="sum-output"></output></span>
+    <br>
+    <label for="calculate-sum">
+      <button type="button" id="calculate-sum">Sum</button>
+    </label>
+    <button type="button" class="mutiply">Multiply</button>
+    <button type="button" class="divide">Divide</button>
+    <br>
+  </div>
+  <button type="button" class="print-page">🖨️Print</button>
 
   <script src="script2.js"></script>
 </body>
