--- a/SELF/index.html
+++ b/SELF/index.html
@@ -3,27 +3,139 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>doc</title>
-  <base href="http://127.0.0.1:3000/images/">
+  <title>Web Development Learning By Practicing DEEP WORK</title>
   <link rel="stylesheet" href="styles.css">
-  <script>
-    function displayUSDateTime() {
-      const now = new Date();
-      document.getElementById('dateAndTime').innerHTML = now;
-    }
-  </script>
+
 </head>
 <body>
-  <p class="para">Paragraph is a block level element</p>
-  <span>Span is an inline level element</span><br>
+  <div>
+    <p class="paragraph">Paragraph is a block level element</p>
+    <span class="span">Span is an inline level element</span><br>
+    <button class="day-night-btn" type="button" onclick="dayMode()"><img src="/images/icons8-dark-mode-100.png" alt="day mode icon" class="day-mode-icon"></button>
+  </div>
 
-  <!-- Using base element for putting images on my page -->
-  <img src="women_with_a_camera.jpeg" alt=""><br>
+  <div>
+    <img src="images/women_with_a_camera.jpeg" alt=""><br>
+    <button class="display-date" type="button" onclick="displayUSDateTime()">Display Date & Time</button>
+    <p id="dateAndTime"></p>
+  </div>
+
+  <!-- html forms -->
+  <form action="" method="get">
+    <fieldset>
+      <legend>Your Details</legend>
+      <label for="fname">First Name &nbsp;</label>
+      <input type="text" id="fname" name="fname" placeholder="ex: Rubel" value=""><br>
+      <label for="lname">Last Name &nbsp;</label>
+      <input type="text" id="lname" name="lname" placeholder="ex: Ahamed" value=""><br>
+      <label for="country">Country* &nbsp;</label>
+      <input type="text" id="country" name="country" value="India" readonly required><br>
+      <label for="pincode">Pincode &nbsp;</label>
+      <input type="text" id="pincode" name="pincode" maxlength="6"><br>
+
+      <label for="resume">Resume</label>
+      <input type="file" name="resume" id="resume"><br>
+
+      <label for="multiple-files">Select Multiple File</label>
+      <input type="file" id="multiple-files" name="multipleFiles" multiple>
+      <!-- radio button -->
+      <div class="radio-btn">
+        <p>Your mother tongue</p>
+        <input type="radio" name="mother-tounge" id="bengali" value="Bengali"><label for="bengali">Bengali</label>
+
+        <input type="radio" name="mother-tounge" id="english" value="English"><label for="english">English</label>
+
+        <input type="radio" name="mother-tounge" id="hindi" value="Hindi"><label for="hindi">Hindi</label>
+
+        <input type="radio" name="mother-tounge" id="tamil" value="Tamil"><label for="tamil">Tamil</label>
+      </div>
+
+      <p>Your degree level</p>
+      <div class="checkbox">
+        <input type="checkbox" name="isTenPassed" id="ten-passout" value="true"><label for="ten-passout">10<sup>th</sup> Passout</label>
+
+        <input type="checkbox" name="isTwelevePassed" id="tweleve-passout" value="true"><label for="tweleve-passout">12<sup>th</sup> Passout</label>
+
+        <input type="checkbox" name="isGraduate" id="graduate" value="true"><label for="graduate">Graduate</label>
+      </div>
+      <div class="dropdown-list">
+        <p>Choose your favourite subject</p>
+        <select name="cars" id="cars" size="3">
+          <option value="" disabled selected>Choose Subject</option>
+          <option value="Bengali">Bengali</option>
+          <option value="English">English</option>
+          <option value="Physics">Physics</option>
+          <option value="Checmistry">Chemistry</option>
+          <option value="Math">Math</option>
+        </select>
+      </div>
+      <div>
+        <label for="myBrowser">My daily use browser is:</label>
+        <input list="browsers" id="myBrowser" name="myBrowser">
+        <datalist id="browsers">
+          <option value="Chrome"></option>
+          <option value="Firefox"></option>
+          <option value="Opera"></option>
+          <option value="Safari"></option>
+          <option value="Microsoft Edge"></option>
+        </datalist>
+      </div>
+      <div class="feedback">
+        <p>Please give your valuable feedback here</p>
+        <textarea name="feedback-message" id="feedback" cols="30" rows="7">My feedback for you are..</textarea>
+      </div>
+      <input type="submit" value="Submit" class="submit"><br><br>
+    </fieldset>
+  </form>
+
+    <!-- Link page -->
+    <a href="add_JS.html" class="js-page">Add JS Page</a><br><br>
+    <!-- Click me -->
+    <button type="button" onclick="alert(`You are a Cutie Pie`)" class="clickme-btn">👆 Click Me</button><br><br>
+    <!-- html responsiveness -->
+    <div class="container">
+      <div class="left">
+        <p>Left Menu</p>
+      </div>
+      
+      <div class="main">
+        <p>Main Content</p>
+      </div>
+      
+      <div class="right">
+        <p>Right Content</p>
+      </div>
+    </div>
   
-  <iframe src="/extra_page.html" frameborder="0" >Iframe element</iframe><br>
+    <!-- html code element -->
+    <code>
+      cosole.log("This is written under html code element")
+      x = 5;
+      y = 2;
+    </code>
+    <pre>
+      <code>
+        cosole.log("This is written under html code element")
+        x = 5;
+        y = 2;
+      </code>
+    </pre>
+  
+    <!-- html kbd element -->
+    <p>For printing this page press <kbd>Ctrl + P</kbd></p>
+  
+    <!-- html samp element -->
+    <p>Programming output</p>
+    <p><samp>404 File not found.</samp></p>
+  
+    <!-- html var element -->
+    <p>Sum of <var>x</var> + <var>y</var> = <var>z</var> </p>
+  
+    <!-- html reserved character -->
+    <p>1 &lt; 2</p>
+    <p>2 &gt; 1</p>
+  
 
-  <button type="button" onclick="displayUSDateTime()">Display Date & Time</button>
-
-  <p id="dateAndTime"></p>
+  <script src="index.js"></script>
 </body>
 </html>
