--- a/SELF/add_JS.html
+++ b/SELF/add_JS.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Practice is the best way to learn, so i am learning web development by practicing it.">
   <meta name="author" content="Md Rubel Ahamed">
   <title>Add just</title>
-  <link rel="stylesheet" href="style2.css">
+  <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
   <p class="show-url"></p>
@@ -37,6 +37,6 @@
   </div>
   <button type="button" class="print-page">🖨️Print</button>
 
-  <script src="script2.js"></script>
+  <script src="add_JS.js"></script>
 </body>
 </html>
